--- a/src/scss/blocs/landing.scss
+++ b/src/scss/blocs/landing.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+
 @mixin mobile {
   @media (max-width: 768px) {
     @content;
@@ -12,7 +14,7 @@ header {
     align-items: center;
 
     @include mobile {
-      justify-content: space-between;
+      justify-content: space-around;
     }
 
     img {
@@ -31,7 +33,6 @@ header {
 
       @include mobile {
         margin-right: 0px;
-        margin-left: 30%;
       }
     }
 
@@ -68,6 +69,7 @@ header {
 
         @include mobile {
           width: 30%;
+          margin-top: 10px;
         }
       }
     }
@@ -88,7 +90,7 @@ main {
     h1 {
       font-size: 48px;
       color: black;
-      font-family: Roboto;
+      font-family: "Roboto", sans-serif;
       line-height: 1.58;
       font-weight: bold;
 
@@ -101,7 +103,7 @@ main {
       margin-top: 2em;
       font-size: 25px;
       color: black;
-      font-family: Roboto;
+      font-family: "Roboto", sans-serif;
       line-height: 1.58;
       font-weight: bold;
     }
@@ -114,7 +116,7 @@ main {
       color: black;
       font-size: 21px;
       margin-top: 1.25em;
-      font-family: Roboto;
+      font-family: "Roboto", sans-serif;
       line-height: 1.58;
 
       &.p__strong {
@@ -148,7 +150,7 @@ main {
     }
 
     p.autor {
-      font-family: Roboto;
+      font-family: "Roboto", sans-serif;
       font-weight: bold;
       font-size: 16px;
       line-height: 150%;
@@ -167,7 +169,7 @@ main {
       p {
         margin: 0;
         margin-right: 25px;
-        font-family: Roboto;
+        font-family: "Roboto", sans-serif;
         font-weight: bold;
         font-size: 20px;
         line-height: 150%;
@@ -184,7 +186,7 @@ main {
             font-size: 20px;
             color: #717b8e;
 
-            &:hover{
+            &:hover {
               color: #2c7aa6;
             }
           }
@@ -194,18 +196,80 @@ main {
   }
 }
 
-footer{
-  background-color: #2A303B;
+footer {
+  background-color: #2a303b;
   display: flex;
   flex-direction: column;
   align-items: center;
-  div {
+  div.menu {
     width: 80%;
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+    border-bottom: solid 2px white;
+    @include mobile {
+      display: block;
+    }
 
-    ul{
+    ul {
+      li:first-child {
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+      }
+      li {
+        margin-top: 15px;
+        color: white;
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-size: 16px;
+        a {
+          color: rgb(194, 194, 194);
+          text-decoration: none;
+          &:hover {
+            color: white;
+          }
+        }
+      }
+    }
+  }
 
+  ul.network {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    @include mobile {
+      display: block;
+      li{
+        margin-bottom: 15px;
+      }
+    }
+    li:first-child {
+      font-family: "Roboto", sans-serif;
+      font-weight: bold;
+      font-size: 20px;
+      color: white;
+    }
+    li {
+      a {
+        display: flex;
+        align-items: center;
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-size: 16px;
+        color: rgb(194, 194, 194);
+        text-decoration: none;
+        i {
+          font-size: 25px;
+          margin-right: 10px;
+        }
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
 }
