--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -33,6 +33,10 @@ header {
         padding: 10px 20px 10px 20px;
         background-color: #ffc700;
         cursor: pointer;
+
+        &:hover{
+          background-color: #ffdc5f;
+        }
       }
     }
   
